--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,71 @@
           <hr />
 
           <div class="module">
+            <h3>Links</h3>
+
+            <h5>
+              Useful links to posts, deals, and tools.
+            </h5>
+
+            <span><b>Posts</b>: </span>
+            <a href="https://www.reddit.com/r/vrgamedeals/" target="_blank"
+              >Hot</a
+            >
+            |
+            <a href="https://www.reddit.com/r/vrgamedeals/new/" target="_blank"
+              >New</a
+            >
+            |
+            <a
+              href="https://www.reddit.com/r/vrgamedeals/rising/"
+              target="_blank"
+              >Rising</a
+            >
+            |
+            <a href="https://www.reddit.com/r/vrgamedeals/top/" target="_blank"
+              >Top</a
+            >
+            |
+            <a
+              href="https://www.reddit.com/r/vrgamedeals/search?q=-flair%3AExpired%21&restrict_sr=on&include_over_18=on&sort=new&t=all"
+              target="_blank"
+              >Not Expired</a
+            >
+
+            <br />
+
+            <span><b>Steam</b>: </span>
+            <a
+              href="https://store.steampowered.com/search/?vrsupport=402&filter=weeklongdeals"
+              target="_blank"
+              >Weeklong VR Deals</a
+            >
+            |
+            <a
+              href="https://store.steampowered.com/sale/vr_specials/"
+              target="_blank"
+              >Featured VR Specials</a
+            >
+            |
+            <a
+              href="https://store.steampowered.com/search/?specials=1&vrsupport=402"
+              target="_blank"
+              >All VR Deals</a
+            >
+
+            <br />
+
+            <span><b>Other Tools</b>: </span>
+            <a
+              href="https://www.tablesgenerator.com/markdown_tables"
+              target="_blank"
+              >Markdown Tables Generator</a
+            >
+          </div>
+
+          <hr />
+
+          <div class="module">
             <h3>Steam Page Scraper</h3>
             <h5>
               Scrapes the provided Steam page and returns a formatted title.
@@ -69,7 +134,12 @@
               Scrapes the provided Steam search and returns a formatted markdown
               table.
             </h5>
-            <h6><i>Only includes VR-supported games which are currently discounted.</i></h6>
+            <h6>
+              <i
+                >Only includes VR-supported games which are currently
+                discounted.</i
+              >
+            </h6>
             <label for="steam-app-id"><b>Steam Search Query</b></label>
             <div class="input-group mb-3">
               <div class="input-group-prepend">
