--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,27 @@
 
             <br />
 
+            <span><b>Other Stores</b>: </span>
+            <a
+              href="https://www.humblebundle.com/store/search?sort=bestselling&filter=onsale&genre=Virtual%20Reality"
+              target="_blank"
+              >Humble Store - VR Deals</a
+            >
+            |
+            <a
+              href="https://www.oculus.com/experiences/rift/section/1578364258944223"
+              target="_blank"
+              >Oculus Rift - On Sale Now</a
+            >
+            |
+            <a
+              href="https://store.playstation.com/en-us/grid/STORE-MSF77008-VIRTUALREALITYG/1"
+              target="_blank"
+              >PSVR Catalog</a
+            >
+
+            <br />
+
             <span><b>Other Tools</b>: </span>
             <a
               href="https://www.tablesgenerator.com/markdown_tables"
