--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,18 @@
               target="_blank"
               >Markdown Tables Generator</a
             >
+            |
+            <a
+              href="https://www.reddit.com/r/HFY/wiki/ref/faq/formatting_guide"
+              target="_blank"
+              >Reddit Formatting Guide</a
+            >
+            |
+            <a
+              href="https://redditpreview.com/"
+              target="_blank"
+              >Reddit Preview</a
+            >
           </div>
 
           <hr />
