--- a/public/index.html
+++ b/public/index.html
@@ -116,9 +116,7 @@
               >Reddit Formatting Guide</a
             >
             |
-            <a
-              href="https://redditpreview.com/"
-              target="_blank"
+            <a href="https://redditpreview.com/" target="_blank"
               >Reddit Preview</a
             >
           </div>
@@ -197,6 +195,25 @@
           </div>
 
           <hr />
+
+          <div class="text-center mb-5">
+            Created by
+            <a href="https://www.reddit.com/user/novakevin" target="_blank"
+              >u/NovaKevin</a
+            >
+            |
+            <a
+              href="https://github.com/KevinNovak/vrgamedeals-Tools"
+              target="_blank"
+              >Source Code</a
+            >
+            |
+            <a
+              href="https://github.com/KevinNovak/vrgamedeals-Tools/issues"
+              target="_blank"
+              >Submit a Bug</a
+            >
+          </div>
         </div>
       </div>
     </div>
