--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
             <a
               href="https://github.com/KevinNovak/vrgamedeals-Tools/issues"
               target="_blank"
-              >Submit a Bug</a
+              >Report a Bug</a
             >
           </div>
         </div>
