Prefill the placeholders

--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,7 @@
                 type="number"
                 class="form-control"
                 placeholder="450390"
+                value="450390"
               />
               <div class="input-group-append">
                 <button
@@ -177,6 +178,7 @@
                 type="text"
                 class="form-control"
                 placeholder="vrsupport=402&filter=weeklongdeals"
+                value="vrsupport=402&filter=weeklongdeals"
               />
               <div class="input-group-append">
                 <button
