--- a/public/index.html
+++ b/public/index.html
@@ -124,9 +124,9 @@
           <hr />
 
           <div class="module">
-            <h3>Steam Page Scraper</h3>
+            <h3>Steam App Scraper</h3>
             <h5>
-              Scrapes the provided Steam page and returns a formatted title.
+              Scrapes the provided Steam app page and returns a formatted title.
             </h5>
             <label for="steam-app-url"><b>Steam App URL</b></label>
             <div class="input-group mb-3">
