Add links for search scraper

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,23 @@
               Scrapes the provided Steam search and returns a formatted markdown
               table.
             </h5>
+            <p>
+              <a href="https://store.steampowered.com/search/" target="_blank"
+                >Steam Search</a
+              >
+              |
+              <a
+                href="https://store.steampowered.com/search/?vrsupport=402&filter=weeklongdeals"
+                target="_blank"
+                >Weeklong VR Deals</a
+              >
+              |
+              <a
+                href="https://store.steampowered.com/search/?specials=1&vrsupport=402"
+                target="_blank"
+                >All VR Deals</a
+              >
+            </p>
             <label for="steam-search-url"><b>Steam Search URL</b></label>
             <div class="input-group mb-3">
               <input
