Add subtitle and link to more information

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,14 @@
             >
             Tools
           </h1>
+          <h5>
+            A collection of tools to help the r/vrgamedeals community.
+          </h5>
+          <a
+            href="https://www.reddit.com/r/vrgamedeals/comments/d1e5wo/introducing_rvrgamedeals_tools/"
+            target="_blank"
+            >See here for more information about using these tools.</a
+          >
 
           <hr />
 
