--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <h3>Links</h3>
 
             <h5>
-              Useful links to posts, deals, and tools.
+              Useful links to posts, deals, and other tools.
             </h5>
 
             <span><b>Posts</b>: </span>
