Add checkbox to search all pages

--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,13 @@
                 >Search: All VR Deals</a
               >
             </p>
-            <label for="steam-search-url"><b>Steam Search URL</b></label>
+            <label for="steam-search-url" class="mr-3"
+              ><b>Steam Search URL</b></label
+            >
+            <input type="checkbox" value="" id="search-all-pages" />
+            <label class="form-check-label" for="search-all-pages">
+              Search all pages
+            </label>
             <div class="input-group mb-3">
               <input
                 id="steam-search-url"
