--- a/public/index.html
+++ b/public/index.html
@@ -152,10 +152,10 @@
               />
               <div class="input-group-append">
                 <button
-                  id="retrieve-page-button"
+                  id="retrieve-steam-app-title"
                   class="btn btn-outline-secondary"
                   type="button"
-                  onclick="retrieveGameData()"
+                  onclick="retrieveSteamAppTitle()"
                 >
                   Retrieve
                 </button>
@@ -212,10 +212,10 @@
               />
               <div class="input-group-append">
                 <button
-                  id="retrieve-search-button"
+                  id="retrieve-steam-search-table"
                   class="btn btn-outline-secondary"
                   type="button"
-                  onclick="retrieveSearchData()"
+                  onclick="retrieveSteamSearchTable()"
                 >
                   Retrieve
                 </button>
