--- a/public/index.html
+++ b/public/index.html
@@ -152,10 +152,10 @@
               />
               <div class="input-group-append">
                 <button
-                  id="retrieve-page-button"
+                  id="retrieve-steam-app-title"
                   class="btn btn-outline-secondary"
                   type="button"
-                  onclick="retrieveGameData()"
+                  onclick="retrieveSteamAppTitle()"
                 >
                   Retrieve
                 </button>
@@ -196,7 +196,13 @@
                 >Search: All VR Deals</a
               >
             </p>
-            <label for="steam-search-url"><b>Steam Search URL</b></label>
+            <label for="steam-search-url" class="mr-3"
+              ><b>Steam Search URL</b></label
+            >
+            <input type="checkbox" value="" id="search-all-pages" />
+            <label class="form-check-label" for="search-all-pages">
+              Search all pages
+            </label>
             <div class="input-group mb-3">
               <input
                 id="steam-search-url"
@@ -206,10 +212,10 @@
               />
               <div class="input-group-append">
                 <button
-                  id="retrieve-search-button"
+                  id="retrieve-steam-search-table"
                   class="btn btn-outline-secondary"
                   type="button"
-                  onclick="retrieveSearchData()"
+                  onclick="retrieveSteamSearchTable()"
                 >
                   Retrieve
                 </button>
