--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
               >
               |
               <a
-                href="https://store.steampowered.com/search/?specials=1&vrsupport=402"
+                href="https://store.steampowered.com/search/?category1=998%2C994%2C21&vrsupport=402&specials=1"
                 target="_blank"
                 >Search: All VR Deals</a
               >
