--- a/public/index.html
+++ b/public/index.html
@@ -264,6 +264,8 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/json2csv"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
