--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,8 @@
                             href="#"
                             target="_blank"
                             class="hidden"
-                        ></a>
+                        >Link</a>
+                        <p id="steam-app-row-para" class="hidden">Row</p>
                     </div>
 
                     <hr />
