Change steam app row to a textarea

--- a/public/index.html
+++ b/public/index.html
@@ -182,10 +182,16 @@
                                     >Link</a
                                 >
                             </p>
-                            <label for="steam-app-row-para"
+                            <label for="steam-app-row-textarea"
                                 ><b>Table Row</b></label
                             >
-                            <p id="steam-app-row-para">Row</p>
+                            <textarea
+                                id="steam-app-row-textarea"
+                                class="form-control"
+                                wrap="off"
+                                rows="1"
+                                readonly
+                            ></textarea>
                         </div>
                     </div>
 
