--- a/public/index.html
+++ b/public/index.html
@@ -87,22 +87,31 @@
                         >
                         |
                         <a
-                            href="https://store.steampowered.com/sale/vr_specials/"
-                            target="_blank"
-                            >Featured VR Specials</a
-                        >
-                        |
-                        <a
-                            href="https://store.steampowered.com/search/?category1=998%2C994%2C21&vrsupport=402&specials=1"
+                            href="https://store.steampowered.com/search/?vrsupport=402&specials=1"
                             target="_blank"
                             >All VR Deals</a
                         >
 
                         <br />
 
+                        <span><b>Other Subreddits</b>: </span>
+                        <a
+                            href="https://www.reddit.com/r/OculusStore/search/?q=%5BSale%5D&sort=new&restrict_sr=on&t=month"
+                            target="_blank"
+                            >r/OculusStore - New Deals</a
+                        >
+                        |
+                        <a
+                            href="https://www.reddit.com/r/buildapcsales/search/?q=VR&sort=new&restrict_sr=on&t=month"
+                            target="_blank"
+                            >r/buildapcsales - New VR Deals</a
+                        >
+
+                        <br />
+
                         <span><b>Other Stores</b>: </span>
                         <a
-                            href="https://www.humblebundle.com/store/search?sort=bestselling&filter=onsale&genre=Virtual%20Reality"
+                            href="https://www.humblebundle.com/store/search?sort=bestselling&filter=onsale&genre=vr"
                             target="_blank"
                             >Humble Store - VR Deals</a
                         >
@@ -216,7 +225,7 @@
                             >
                             |
                             <a
-                                href="https://store.steampowered.com/search/?category1=998%2C994%2C21&vrsupport=402&specials=1"
+                                href="https://store.steampowered.com/search/?vrsupport=402&specials=1"
                                 target="_blank"
                                 >Search: All VR Deals</a
                             >
