--- a/public/index.html
+++ b/public/index.html
@@ -17,22 +17,18 @@
             <div class="row">
                 <div class="col">
                     <h1 class="mt-3">
-                        <a
-                            href="https://www.reddit.com/r/vrgamedeals/"
-                            target="_blank"
+                        <a href="https://www.reddit.com/r/vrgamedeals/" target="_blank"
                             >r/vrgamedeals</a
                         >
                         Tools
                     </h1>
                     <h5>
-                        A collection of tools to help the r/vrgamedeals
-                        community.
+                        A collection of tools to help the r/vrgamedeals community.
                     </h5>
                     <a
                         href="https://www.reddit.com/r/vrgamedeals/comments/d1e5wo/introducing_rvrgamedeals_tools/"
                         target="_blank"
-                        >See here for more information about using these
-                        tools.</a
+                        >See here for more information about using these tools.</a
                     >
 
                     <hr />
@@ -45,29 +41,15 @@
                         </h5>
 
                         <span><b>Posts</b>: </span>
-                        <a
-                            href="https://www.reddit.com/r/vrgamedeals/"
-                            target="_blank"
-                            >Hot</a
-                        >
+                        <a href="https://www.reddit.com/r/vrgamedeals/" target="_blank">Hot</a>
                         |
-                        <a
-                            href="https://www.reddit.com/r/vrgamedeals/new/"
-                            target="_blank"
-                            >New</a
-                        >
+                        <a href="https://www.reddit.com/r/vrgamedeals/new/" target="_blank">New</a>
                         |
-                        <a
-                            href="https://www.reddit.com/r/vrgamedeals/rising/"
-                            target="_blank"
+                        <a href="https://www.reddit.com/r/vrgamedeals/rising/" target="_blank"
                             >Rising</a
                         >
                         |
-                        <a
-                            href="https://www.reddit.com/r/vrgamedeals/top/"
-                            target="_blank"
-                            >Top</a
-                        >
+                        <a href="https://www.reddit.com/r/vrgamedeals/top/" target="_blank">Top</a>
                         |
                         <a
                             href="https://www.reddit.com/r/vrgamedeals/search?q=-flair%3AExpired%21&restrict_sr=on&include_over_18=on&sort=new&t=all"
@@ -129,9 +111,7 @@
                         <br />
 
                         <span><b>Other Tools</b>: </span>
-                        <a
-                            href="https://www.tablesgenerator.com/markdown_tables"
-                            target="_blank"
+                        <a href="https://www.tablesgenerator.com/markdown_tables" target="_blank"
                             >Markdown Tables Generator</a
                         >
                         |
@@ -141,9 +121,7 @@
                             >Reddit Formatting Guide</a
                         >
                         |
-                        <a href="https://redditpreview.com/" target="_blank"
-                            >Reddit Preview</a
-                        >
+                        <a href="https://redditpreview.com/" target="_blank">Reddit Preview</a>
                     </div>
 
                     <hr />
@@ -153,9 +131,7 @@
                         <h5>
                             Extracts data from a Steam app page.
                         </h5>
-                        <label for="steam-app-url-input"
-                            ><b>Steam App URL</b></label
-                        >
+                        <label for="steam-app-url-input"><b>Steam App URL</b></label>
                         <div class="input-group mb-3">
                             <input
                                 id="steam-app-url-input"
@@ -174,24 +150,13 @@
                                 </button>
                             </div>
                         </div>
-                        <span id="steam-app-info-span" class="hidden"
-                            >No results.</span
-                        >
+                        <span id="steam-app-info-span" class="hidden">No results.</span>
                         <div id="steam-app-results" class="hidden">
-                            <label for="steam-app-result-link"
-                                ><b>Post Title</b></label
-                            >
+                            <label for="steam-app-result-link"><b>Post Title</b></label>
                             <p>
-                                <a
-                                    id="steam-app-result-link"
-                                    href="#"
-                                    target="_blank"
-                                    >Link</a
-                                >
+                                <a id="steam-app-result-link" href="#" target="_blank">Link</a>
                             </p>
-                            <label for="steam-app-row-textarea"
-                                ><b>Table Row</b></label
-                            >
+                            <label for="steam-app-row-textarea"><b>Table Row</b></label>
                             <textarea
                                 id="steam-app-row-textarea"
                                 class="form-control"
@@ -210,9 +175,7 @@
                             Extracts data from a Steam search.
                         </h5>
                         <p>
-                            <a
-                                href="https://store.steampowered.com/search/"
-                                target="_blank"
+                            <a href="https://store.steampowered.com/search/" target="_blank"
                                 >Search</a
                             >
                             |
@@ -231,15 +194,8 @@
                         <label for="steam-search-url-input" class="mr-3"
                             ><b>Steam Search URL</b></label
                         >
-                        <input
-                            type="checkbox"
-                            value=""
-                            id="steam-search-all-pages-input"
-                        />
-                        <label
-                            class="form-check-label"
-                            for="steam-search-all-pages-input"
-                        >
+                        <input type="checkbox" value="" id="steam-search-all-pages-input" />
+                        <label class="form-check-label" for="steam-search-all-pages-input">
                             Search all pages
                         </label>
                         <div class="input-group mb-3">
@@ -260,23 +216,16 @@
                                 </button>
                             </div>
                         </div>
-                        <span id="steam-search-info-span" class="hidden"
-                            >No results.</span
-                        >
+                        <span id="steam-search-info-span" class="hidden">No results.</span>
                         <div id="steam-search-results" class="hidden">
-                            <label for="steam-search-result-textarea"
-                                ><b>Markdown Table</b></label
-                            >
+                            <label for="steam-search-result-textarea"><b>Markdown Table</b></label>
                             <textarea
                                 id="steam-search-result-textarea"
                                 class="form-control search-result"
                                 wrap="off"
                                 readonly
                             ></textarea>
-                            <a
-                                id="steam-search-download-link"
-                                href="#"
-                                target="_blank"
+                            <a id="steam-search-download-link" href="#" target="_blank"
                                 >Download Raw Data as CSV</a
                             >
                         </div>
@@ -284,17 +233,52 @@
 
                     <hr />
 
+                    <div class="module">
+                        <h3>Oculus Experience Scraper</h3>
+                        <h5>
+                            Extracts data from an Oculus experience page.
+                        </h5>
+                        <label for="oculus-experience-url-input"
+                            ><b>Oculus Experience URL</b></label
+                        >
+                        <div class="input-group mb-3">
+                            <input
+                                id="oculus-experience-url-input"
+                                type="url"
+                                class="form-control"
+                                placeholder="https://www.oculus.com/experiences/rift/1368187813209608/"
+                            />
+                            <div class="input-group-append">
+                                <button
+                                    id="oculus-experience-btn"
+                                    class="btn btn-outline-secondary"
+                                    type="button"
+                                    onclick="retrieveOculusExperienceTitle()"
+                                >
+                                    Retrieve
+                                </button>
+                            </div>
+                        </div>
+                        <span id="oculus-experience-info-span" class="hidden">No results.</span>
+                        <div id="oculus-experience-results" class="hidden">
+                            <label for="oculus-experience-result-link"><b>Post Title</b></label>
+                            <p>
+                                <a id="oculus-experience-result-link" href="#" target="_blank"
+                                    >Link</a
+                                >
+                            </p>
+                        </div>
+                    </div>
+
+                    <hr />
+
                     <div class="text-center mb-5">
                         Created by
-                        <a
-                            href="https://www.reddit.com/user/novakevin"
-                            target="_blank"
+                        <a href="https://www.reddit.com/user/novakevin" target="_blank"
                             >u/NovaKevin</a
                         >
                         |
-                        <a
-                            href="https://github.com/KevinNovak/vrgamedeals-Tools"
-                            target="_blank"
+                        <a href="https://github.com/KevinNovak/vrgamedeals-Tools" target="_blank"
                             >Source Code</a
                         >
                         |
