--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,7 @@
                         >
                         Tools
                     </h1>
-                    <h5>
-                        A collection of tools to help the r/vrgamedeals community.
-                    </h5>
+                    <h5>A collection of tools to help the r/vrgamedeals community.</h5>
                     <a
                         href="https://www.reddit.com/r/vrgamedeals/comments/d1e5wo/introducing_rvrgamedeals_tools/"
                         target="_blank"
@@ -36,9 +34,7 @@
                     <div class="module">
                         <h3>Links</h3>
 
-                        <h5>
-                            Useful links to posts, deals, and other tools.
-                        </h5>
+                        <h5>Useful links to posts, deals, and other tools.</h5>
 
                         <span><b>Posts</b>: </span>
                         <a href="https://www.reddit.com/r/vrgamedeals/" target="_blank">Hot</a>
@@ -128,9 +124,7 @@
 
                     <div class="module">
                         <h3>Steam App Scraper</h3>
-                        <h5>
-                            Extracts data from a Steam app page.
-                        </h5>
+                        <h5>Extracts data from a Steam app page.</h5>
                         <label for="steam-app-url-input"><b>Steam App URL</b></label>
                         <div class="input-group mb-3">
                             <input
@@ -171,9 +165,7 @@
 
                     <div class="module">
                         <h3>Steam Search Scraper</h3>
-                        <h5>
-                            Extracts data from a Steam search.
-                        </h5>
+                        <h5>Extracts data from a Steam search.</h5>
                         <p>
                             <a href="https://store.steampowered.com/search/" target="_blank"
                                 >Search</a
@@ -235,9 +227,7 @@
 
                     <div class="module">
                         <h3>Oculus Experience Scraper</h3>
-                        <h5>
-                            Extracts data from an Oculus experience page.
-                        </h5>
+                        <h5>Extracts data from an Oculus experience page.</h5>
                         <label for="oculus-experience-url-input"
                             ><b>Oculus Experience URL</b></label
                         >
