Search all time in subreddits

--- a/public/index.html
+++ b/public/index.html
@@ -72,13 +72,13 @@
 
                         <span><b>Other Subreddits</b>: </span>
                         <a
-                            href="https://www.reddit.com/r/OculusStore/search/?q=%5BSale%5D&sort=new&restrict_sr=on&t=month"
+                            href="https://www.reddit.com/r/OculusStore/search/?q=%5BSale%5D&sort=new&restrict_sr=on&t=all"
                             target="_blank"
                             >r/OculusStore - New Deals</a
                         >
                         |
                         <a
-                            href="https://www.reddit.com/r/buildapcsales/search/?q=VR&sort=new&restrict_sr=on&t=month"
+                            href="https://www.reddit.com/r/buildapcsales/search/?q=VR&sort=new&restrict_sr=on&t=all"
                             target="_blank"
                             >r/buildapcsales - New VR Deals</a
                         >
