Add link for r/OculusQuestStore

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,12 @@
                         >
                         |
                         <a
+                            href="https://www.reddit.com/r/OculusQuestStore/search/?q=%5BSale%5D&sort=new&restrict_sr=on&t=all"
+                            target="_blank"
+                            >r/OculusQuestStore - New Deals</a
+                        >
+                        |
+                        <a
                             href="https://www.reddit.com/r/buildapcsales/search/?q=VR&sort=new&restrict_sr=on&t=all"
                             target="_blank"
                             >r/buildapcsales - New VR Deals</a
@@ -93,7 +99,7 @@
                         >
                         |
                         <a
-                            href="https://www.oculus.com/experiences/rift/section/1578364258944223"
+                            href="https://www.oculus.com/experiences/rift/section/1578364258944223/"
                             target="_blank"
                             >Oculus Rift - On Sale Now</a
                         >
